# benchmarking_master

./: README.md
circom_ml/: compile_circom_files.sh  fc_5_deep.circom  test.circom
circom_ml/fc_layer/: fc_layer.circom
circom_ml/networks/: FC_10_layers.circom  FC_15_layers.circom  FC_20_layers.circom  FC_30_layers.circom  FC_3_layers.circom  FC_40_layers.circom  FC_5_layers.circom
gemini_machinelearning/: Cargo.toml  README.md
gemini_machinelearning/examples/: bench_gemini.rs  bench_groth16.rs
gemini_machinelearning/src/: lib.rs
gemini_machinelearning/src/ark_circom_mini/: builder.rs  circuit.rs  mod.rs  r1cs_reader.rs
gemini_machinelearning/src/ark_circom_mini/witness/: memory.rs  witness_calculator.rs
groth16_machinelearning/: Cargo.toml
groth16_machinelearning/examples/: benchmarking.rs
plonky2_machinelearning/: .gitignore  Cargo.toml
plonky2_machinelearning/examples/: benchmarking.rs  mlp_4d.rs
plonky2_machinelearning/src/: lib.rs
plonky2_machinelearning/src/nn_ops/: mod.rs
plonky2_machinelearning/src/nn_ops/decomp/: gate.rs  generator.rs  mod.rs
plonky2_machinelearning/src/nn_ops/decomp/variants/: mod.rs  normalize.rs  relu.rs  relu_normalize.rs
plonky2_machinelearning/src/nn_ops/fc/: gate.rs  generator.rs  mod.rs
