[package]
name = "r1cs_machinelearning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
ark-std = {git = "https://github.com/arkworks-rs/utils"}
ark-ec = {git = "https://github.com/arkworks-rs/algebra"}
ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize-derive = {git = "https://github.com/arkworks-rs/algebra"}
ark-poly = {git = "https://github.com/arkworks-rs/algebra"}
ark-bls12-381 = {git = "https://github.com/arkworks-rs/curves", rev = "99831650f8021cb6a16481bac674420bc6c1a5a1"}
ark-relations = {git = "https://github.com/arkworks-rs/snark"}
ark-snark = {git = "https://github.com/arkworks-rs/snark"}
ark-bn254 = { git = "https://github.com/arkworks-rs/curves" }


[dependencies]
ark-gemini = {git = "https://github.com/arkworks-rs/gemini", features = ["print-trace"]}
ark-std = {version = "0.3.0"}
ark-ec = {version = "0.3.0"}
ark-ff = {version = "0.3.0"}
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0" }
ark-bls12-381 = {git = "https://github.com/arkworks-rs/curves", rev = "99831650f8021cb6a16481bac674420bc6c1a5a1"}
ark-bn254 = { git = "https://github.com/arkworks-rs/curves"  }


#ark-circom = {path = "../ark-circom"}

fnv = { version = "1.0.3", default-features = false }


hex = "0.4.3"
color-eyre = "0.5"
thiserror = "1.0.26"

cfg-if = "1.0"


num-traits = { version = "0.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
byteorder = "1.4.3"

wasmer = { version = "2.0" }
json = "0.12.4"
dhat = {version = "0.3.2", optional = true}

#TURN THIS ON IF YOU WANT TO MEASURE MEMORY USAGE WITH DHAT
#[profile.release]
#debug=1

[features]
default = ["circom-2"]
dhat-heap = ["dep:dhat"]
circom-2 = []





